tests/NormalTests/paczka1/small_fuzzy/94972911.err
Error in line 10: ETxE1 A313 75,6
Error in line 11: 0nZltRyu7 S485 73,7
